@@ -169,3 +169,4 @@
 - Fixed a ban ip {} bug in check_pings
 - Removed some waste of oldconf
 - Moved advanced_check to s_svs.c
+- Made /kline work again, with newconf
